[gd_scene load_steps=2 format=3 uid="uid://bou1pw66u264m"]

[ext_resource type="Script" path="res://Wire.gd" id="1_3wuyu"]

[node name="Wire" type="Node2D" node_paths=PackedStringArray("myArea")]
script = ExtResource("1_3wuyu")
myArea = NodePath("Area2D")

[node name="Area2D" type="Area2D" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
